--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "dev": "nodemon index.js",
-        "start": "node index.js",
+        "start": "pm2-runtime start ecosystem.config.js --env production",
         "heroku-postbuild": "cd client && npm install && npm run build"
     },
     "keywords": [],
@@ -17,6 +17,7 @@
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "nodemon": "^2.0.20",
+        "pm2": "^5.2.2",
         "twilio": "^3.83.3"
     }
 }
