--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "dev": "nodemon index.js",
         "start": "pm2-runtime start ecosystem.config.js --env production",
-        "heroku-postbuild": "cd client && npm install && npm run build"
+        "heroku-postbuild": "npm install && cd client && npm install && npm run build"
     },
     "keywords": [],
     "author": "",
